[package]
name = "x-right-touch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
inputbot = "0.6.0"
log = "0.4.20"
once_cell = "1.19.0"
parking_lot = "0.12.1"
rdev = "0.5.3"

[profile.release]
strip = true
